tests/fixtures/type_errors/contract_type_mismatch.airl
;; ERROR: must be Bool
(defn bad-contract
  :sig [(x : i32) -> i32]
  :requires [(+ x 1)]
  :body x)
